# ugh-audit-core

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  README.md  audit.py  audit_102_expanded_synonym.csv  batch_audit_102.py  cascade_matcher.py  decider.py  detector.py  experiment_input.json  grv_calculator.py  mode_grv.py  mode_signal.py  prepare_data.py  pyproject.toml  requirements.txt  results_detail.csv  results_summary.json  results_summary.md  run_experiment.py  semantic_loss.py  session_report_20260402.md  ugh_calculator.py  z_quality_check.py
.claude/: settings.json
.claude/hooks/: session-end-detect.sh
.claude/memory/: 2026-04-10-2.md  2026-04-10.md  2026-04-11-2.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14-2.md  2026-04-14.md  2026-04-15-2.md  2026-04-15-3.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18-2.md  2026-04-18-3.md  2026-04-18.md  2026-04-20-2.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23-2.md  2026-04-23.md  2026-04-24.md  2026-05-02.md  _backlog.md  _index.md  _poc_completion_checklist.md
.github/workflows/: ci-weekly.yml  ci.yml
.well-known/: ai-plugin.json
analysis/: annotation_blind_check.py  annotation_sampler.py  annotation_ui.py  baseline_comparison.py  baseline_comparison_ha20.csv  baseline_comparison_ha48.csv  baseline_comparison_summary.md  calibrate_grv_lsem.py  calibrate_phase_e_thresholds.py  cascade_expansion_result.md  cohen_kappa.py  extract_claude_transcript.py  false_hit_analysis.py  false_hit_analysis_ha48.csv  false_hit_summary.md  g_eval_comparison.py  ghost_tfidf_resolution.md  grv_ha48_check.py  grv_lsem_calibration_result.csv  grv_lsem_calibration_result_post95.csv  grv_v13_acceptance.py  grv_v13_grid_search.py  grv_v14_acceptance.py  ha28_rho_diagnosis.md  ha28_rho_diagnosis_data.csv  ha48_regression_check.csv  loocv_lsem_weights.py  merge_ha48_accept40.py  mode_grv_ha48_check.py  optimize_semantic_loss_weights.py  phase_e_calibration_grid.csv  phase_e_calibration_result.md  pipeline_b_dependency_map.md  q100_annotation_review.md  round4_baseline_report.md  run_incremental_calibration.py  self_audit_sample.json  self_audit_session.py  semantic_loss_optimization_result.csv  task5_final_checklist.md  (+2 more)
analysis/cascade_poc/: dev_cascade_20_selection.md
analysis/fr_threshold/: part_a_comparison.csv  part_b_new_hits.csv  part_c_decision.md
analysis/metadata_policy/: tune_promotion_thresholds.py  tuned_promotion_policy.json
analysis/n48_verification/: delta_e_a_recalc.py  (+16 more)
calm_encoder/: __init__.py  configuration_autoencoder.py  modeling_autoencoder.py
config/: metadata_promotion_policy.json
data/: README.md  phase_c_scored_v1_t0_only.jsonl
docs/: annotation_protocol.md  cascade_design.md  detector_design.md  formulas.md  golden_store.md  grv_design.md  metadata_pipeline.md  mode_affordance.md  mode_affordance_v1_addendum.md  mode_affordance_v1_task.md  opcode_evaluation_plan.md  orchestration_design.md  phase1_migration_plan.md  phase_e_verdict_integration.md  related_metrics_comparison.md  roadmap.md  self_audit_experiment.md  semantic_loss.md  server_api.md  session_report_cascade_c5.md  svp_rpe_implementation_plan.md  thresholds.md  troubleshooting.md  validation.md
examples/: basic_audit.py
experiments/: README.md  adversarial_meta_hack.py  meta_cache.py  meta_generator.py  orchestrator.py  response_source.py  validate_against_102.py  z_gate_merge_validation.py
opcodes/: metapatch_opcodes.yaml  runtime_repair_opcodes.yaml
paper/: README.md  abstract_v0.md  main.tex  references.bib
registry/: operator_catalog.yaml  premise_frames.yaml  reserved_terms.yaml
schema/: mode_affordance_schema_v1.json  output_schema.yaml
scripts/: collect_phase_c.py  doc_consistency_check.sh  export_phase_c.py  label_mode_affordance.py  merge_annotations_48.py  q_metadata_drafter.py  rerun_cascade_baseline.py  rescore_phase_c.py  rescore_v1_final.py  review_new_hits.py  run_cascade_poc.py  score_phase_c.py  structural_gate.py  synonym_ceiling_analysis.py  threshold_diagnostic.py  validate_fr_threshold.py  validate_threshold_reduction.py
tests/: test_ai_draft_pipeline.py  test_annotation_tools.py  test_cascade_tier2.py  test_cascade_tier3.py  test_collector.py  test_delta_e_variants.py  test_dependencies_shared.py  test_detector_original_keys_fallback.py  test_disqualifying_shortcuts.py  test_embedding_cache.py  test_engine_runtime.py  test_engine_skeleton.py  test_examples.py  test_extract_claude_transcript.py  test_golden_store.py  test_grv_calculator.py  test_grv_ja.py  test_ha48_regression.py  test_hit_sources.py  test_imports.py  test_mcp_server.py  test_metadata_generator.py  test_metapatch_compiler.py  test_mode_affordance_schema.py  test_mode_grv.py  test_mode_signal.py  test_operator_frame.py  test_pipeline.py  test_pipeline_a.py  test_pipeline_parity.py  test_por_boundary.py  test_q_metadata_drafter.py  test_quality_score.py  test_relaxed_tier1.py  test_scorer.py  test_scorer_st.py  test_self_audit_session.py  test_semantic_loss.py  test_server.py  test_soft_rescue.py  (+5 more)
ugh_audit/: __init__.py  cli.py  dependencies.py  mcp_server.py  metadata_generator.py  metadata_policy.py  pipeline.py  server.py  soft_rescue.py
(+115 files in other folders)
