[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugh-audit-core"
version = "0.1.0"
description = "UGH指標（PoR/ΔE/grv）によるAI回答の意味論的監査基盤"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Yuu6798"}]
requires-python = ">=3.10"
keywords = ["UGH", "PoR", "semantic", "audit", "AI", "UGHer"]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.2",
    "fugashi>=1.3",
    "ipadic>=1.0",
]
ja = [
    "fugashi>=1.3",
    "ipadic>=1.0",
]
ugh3 = [
    "ugh3-metrics-lib @ git+https://github.com/Yuu6798/ugh3-metrics-lib.git",
]
server = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ugh_audit = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
