[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugh-audit-core"
version = "0.3.0"
description = "UGH指標（PoR/ΔE/grv）によるAI回答の意味論的監査基盤"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Yuu6798"}]
requires-python = ">=3.10"
keywords = ["UGH", "PoR", "semantic", "audit", "AI", "UGHer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Japanese",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Yuu6798/ugh-audit-core"
Repository = "https://github.com/Yuu6798/ugh-audit-core"
Issues = "https://github.com/Yuu6798/ugh-audit-core/issues"
Documentation = "https://github.com/Yuu6798/ugh-audit-core/tree/main/docs"

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.2",
    "fugashi>=1.3",
    "ipadic>=1.0",
]
ja = [
    "fugashi>=1.3",
    "ipadic>=1.0",
]
ugh3 = [
    "ugh3-metrics-lib @ git+https://github.com/Yuu6798/ugh3-metrics-lib.git@a0dd7610de9a9b138ceaf8c7d273ea823b3cdf75",
]
server = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "mcp>=1.0",
    "sentence-transformers>=2.2",
    "fugashi>=1.3",
    "ipadic>=1.0",
    "anthropic>=0.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "httpx>=0.25",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "mcp>=1.0",
]
analysis = [
    "scipy>=1.10",
    "matplotlib>=3.7",
]
experiment = [
    "anthropic>=0.40",
    "openai>=1.0",
    "mcp>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = ["audit", "detector", "decider", "ugh_calculator", "cascade_matcher", "semantic_loss", "grv_calculator", "mode_signal", "mode_grv"]

[tool.setuptools.package-data]
registry = ["*.yaml"]
opcodes = ["*.yaml"]
"ugh_audit.reference" = ["*.json"]



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
